--- a/general_ledger.html
+++ b/general_ledger.html
@@ -58,6 +58,7 @@
       }
       button :hover{
         background-color: #ffffff;
+        color: black;
       }
       #cancel-button{
         background-color: #ffffff;
