--- a/partner_ledger.html
+++ b/partner_ledger.html
@@ -167,6 +167,7 @@
       display: inline;
       margin: 0;
   }
+
         </style>
     </head>
     <body>
@@ -206,8 +207,11 @@
         All Entries
       </label>
     </div>
+    
+    <div class ="form-row">
     <b>Partner's</b><br>
       <input type="text">
+    </div>
   </p>
     </div>
     <p><b>Reconciled Entries</b>
@@ -250,13 +254,14 @@
     <table>
       <thead>
         <tr>
-          <th>Date</th>
-          <th>JRNL</th>
-          <th>Account</th>
-          <th>Ref</th>
-          <th>Debit</th>
-          <th>Credit</th>
-          <th>Balance</th>
+          <th>Partners</th>
+          <th>Not due</th>
+          <th>0-30</th>
+          <th>30-60</th>
+          <th>60-90</th>
+          <th>90-120</th>
+          <th>+120</th>
+          <th>Total</th>
         </tr>
       </thead>
       <tbody>
@@ -268,26 +273,10 @@
           <td></td>
           <td></td>
           <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
           <td></td>
         </tr>
         <tr>
           <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
           <td></td>
           <td></td>
           <td></td>
@@ -304,8 +293,30 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
