--- a/general_ledger.html
+++ b/general_ledger.html
@@ -68,6 +68,7 @@
       table {
         width: 100%;
         border-collapse: collapse;
+        background-color: #ffffff;
       }
       
       th, td {
